Bug 456094 - Random crash when interacting with the dock
Summary: Random crash when interacting with the dock
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2022-06-28 19:26 UTC by ryu.ketsueki
Modified: 2022-08-11 20:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ryu.ketsueki 2022-06-28 19:26:35 UTC
Application: latte-dock (20220620.git.4ae96e7)

Qt Version: 5.15.2
Frameworks Version: 5.96.0
Operating System: Linux 5.18.5-lqx1-2-liquorix x86_64
Windowing System: Wayland
Distribution: "openSUSE Tumbleweed"
DrKonqi: 5.25.80 [KCrashBackend]

-- Information about the crash:
I can't find a pattern as to why this happens, only that it may happen but only with user input. It doesn't crash on its own without user interaction. Sometimes it happens when hovering the mouse over the tasks, sometimes when clicking and sometimes when a plasmoid is open, like the Application Dashboard. Since it may or not happen, I can't replicate it.

The crash can be reproduced sometimes.

-- Backtrace:
Application: Latte Dock (latte-dock), signal: Segmentation fault
Content of s_kcrashErrorMessage: std::unique_ptr<char []> = {get() = 0x0}
[KCrash Handler]
#6  0x00007f381c41b049 in QQuickWindow::openglContext() const () at /lib64/libQt5Quick.so.5
#7  0x00007f37df50787a in PipeWireSourceItem::updateTextureDmaBuf(QVector<DmaBufPlane> const&, unsigned int) (this=0x55cfc97e2090, planes=..., format=875713089) at /usr/src/debug/plasma5-workspace-5.25.80git.20220624T170354~6127930b-ku.16.1.x86_64/libtaskmanager/declarative/pipewiresourceitem.cpp:235
#8  0x00007f381a416b3f in QtPrivate::QSlotObjectBase::call(QObject*, void**) (a=0x7ffed29e8840, r=0x55cfc97e2090, this=0x55cfcc511d20) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#9  doActivate<false>(QObject*, int, void**) (sender=0x55cfcc576c70, signal_index=6, argv=0x7ffed29e8840) at kernel/qobject.cpp:3886
#10 0x00007f381a40feff in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (sender=sender@entry=0x55cfcc576c70, m=<optimized out>, local_signal_index=local_signal_index@entry=3, argv=argv@entry=0x7ffed29e8840) at kernel/qobject.cpp:3946
#11 0x00007f37df50a9a2 in PipeWireSourceStream::dmabufTextureReceived(QVector<DmaBufPlane> const&, unsigned int) (_t2=875713089, _t1=..., this=0x55cfcc576c70) at /usr/src/debug/plasma5-workspace-5.25.80git.20220624T170354~6127930b-ku.16.1.x86_64/build/libtaskmanager/declarative/taskmanagerplugin_autogen/EWIEGA46WW/moc_pipewiresourcestream.cpp:203
#12 PipeWireSourceStream::handleFrame(pw_buffer*) [clone .isra.0] (this=0x55cfcc576c70, buffer=<optimized out>) at /usr/src/debug/plasma5-workspace-5.25.80git.20220624T170354~6127930b-ku.16.1.x86_64/libtaskmanager/declarative/pipewiresourcestream.cpp:327
#13 0x00007f37df502495 in PipeWireSourceStream::process() (this=0x55cfcc576c70) at /usr/src/debug/plasma5-workspace-5.25.80git.20220624T170354~6127930b-ku.16.1.x86_64/libtaskmanager/declarative/pipewiresourcestream.cpp:356
#14 onProcess(void*) (data=0x55cfcc576c70) at /usr/src/debug/plasma5-workspace-5.25.80git.20220624T170354~6127930b-ku.16.1.x86_64/libtaskmanager/declarative/pipewiresourcestream.cpp:217
#15 0x00007f37df3dbf00 in  () at /lib64/libpipewire-0.3.so.0
#16 0x00007f37df2f868a in  () at /usr/lib64/spa-0.2/support/libspa-support.so
#17 0x00007f37df2f7786 in  () at /usr/lib64/spa-0.2/support/libspa-support.so
#18 0x00007f37df2fa78e in  () at /usr/lib64/spa-0.2/support/libspa-support.so
#19 0x00007f37df50675e in operator() (__closure=<optimized out>) at /usr/src/debug/plasma5-workspace-5.25.80git.20220624T170354~6127930b-ku.16.1.x86_64/libtaskmanager/declarative/pipewirecore.cpp:58
#20 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, PipeWireCore::init()::<lambda()> >::call (arg=<optimized out>, f=<optimized out>) at /usr/include/qt5/QtCore/qobjectdefs_impl.h:146
#21 QtPrivate::Functor<PipeWireCore::init()::<lambda()>, 0>::call<QtPrivate::List<>, void> (arg=<optimized out>, f=<optimized out>) at /usr/include/qt5/QtCore/qobjectdefs_impl.h:256
#22 QtPrivate::QFunctorSlotObject<PipeWireCore::init()::<lambda()>, 0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *) (which=<optimized out>, this_=<optimized out>, r=<optimized out>, a=<optimized out>, ret=<optimized out>) at /usr/include/qt5/QtCore/qobjectdefs_impl.h:443
#23 0x00007f381a416b3f in QtPrivate::QSlotObjectBase::call(QObject*, void**) (a=0x7ffed29e8d90, r=0x55cfc8c8df40, this=0x55cfc76cb820) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#24 doActivate<false>(QObject*, int, void**) (sender=0x55cfcc355f70, signal_index=3, argv=0x7ffed29e8d90) at kernel/qobject.cpp:3886
#25 0x00007f381a40feff in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (sender=sender@entry=0x55cfcc355f70, m=m@entry=0x7f381a6b4880 <QSocketNotifier::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7ffed29e8d90) at kernel/qobject.cpp:3946
#26 0x00007f381a419cbf in QSocketNotifier::activated(QSocketDescriptor, QSocketNotifier::Type, QSocketNotifier::QPrivateSignal) (this=this@entry=0x55cfcc355f70, _t1=..., _t2=<optimized out>, _t3=...) at .moc/moc_qsocketnotifier.cpp:178
#27 0x00007f381a41a4c5 in QSocketNotifier::event(QEvent*) (this=0x55cfcc355f70, e=<optimized out>) at kernel/qsocketnotifier.cpp:302
#28 0x00007f381b2213ce in QApplicationPrivate::notify_helper(QObject*, QEvent*) (this=<optimized out>, receiver=0x55cfcc355f70, e=0x7ffed29e8e90) at kernel/qapplication.cpp:3632
#29 0x00007f381a3dfce8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) (receiver=0x55cfcc355f70, event=0x7ffed29e8e90) at kernel/qcoreapplication.cpp:1064
#30 0x00007f381a437bed in socketNotifierSourceDispatch(GSource*, GSourceFunc, gpointer) (source=0x55cfbd726430) at kernel/qeventdispatcher_glib.cpp:107
#31 0x00007f38185ceea0 in g_main_context_dispatch () at /lib64/libglib-2.0.so.0
#32 0x00007f38185cf258 in  () at /lib64/libglib-2.0.so.0
#33 0x00007f38185cf2ec in g_main_context_iteration () at /lib64/libglib-2.0.so.0
#34 0x00007f381a437106 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x55cfbd7275a0, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#35 0x00007f381a3de75b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7ffed29e90a0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#36 0x00007f381a3e68c6 in QCoreApplication::exec() () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#37 0x00007f381a975a2c in QGuiApplication::exec() () at kernel/qguiapplication.cpp:1867
#38 0x00007f381b221345 in QApplication::exec() () at kernel/qapplication.cpp:2824
#39 0x000055cfbc41834a in main(int, char**) (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/latte-dock-20220620.git.4ae96e7-690.1.x86_64/app/main.cpp:436
[Inferior 1 (process 3120) detached]

Reported using DrKonqi
Comment 1 Michail Vourlakos 2022-06-29 05:38:39 UTC
The crash is from pipewire, probably window previews? are you on wayland?

in any case you should be able to reproduce this with plasma taskmanagers also
Comment 2 ryu.ketsueki 2022-06-29 14:03:03 UTC
(In reply to Michail Vourlakos from comment #1)
> The crash is from pipewire, probably window previews? are you on wayland?
> 
> in any case you should be able to reproduce this with plasma taskmanagers
> also

Yeah, Wayland. Pipewire's been giving me problems on audio recording for a little while but I didn't know it was also affecting previews. Any way you know to solve this?
Comment 3 Nicolas Fella 2022-08-10 15:45:02 UTC
Git commit 0acb09809cd700b1571263b94f6f506d2d08a32b by Nicolas Fella.
Committed on 10/08/2022 at 15:17.
Pushed by nicolasfella into branch 'Plasma/5.25'.

[libtaskmanager] Fix null check for window

window() may be null. We check for that, but 5a3ef9e8253029569deb645af625e2bdd53e95e9 introduced code that uses window() before the check.

Move the check before the relevant code to fix that
Related: bug 457690

M  +7    -1    libtaskmanager/declarative/pipewiresourceitem.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/0acb09809cd700b1571263b94f6f506d2d08a32b
Comment 4 ryu.ketsueki 2022-08-11 20:23:41 UTC
When should I expect the next version of Plasma with this fix?