[libtaskmanager] Fix null check for window

window() may be null. We check for that, but 5a3ef9e8253029569deb645af625e2bdd53e95e9 introduced code that uses window() before the check.

Move the check before the relevant code to fix that

BUG: 456094

BUG: 457690